# PSD-Calculation-Do-et-al-2008

./: .gitignore  CMakeLists.txt  README.md  dump_to_numpy.py  extract_network.py  plot_psd.py
inputs/: dump.cnt.armchair.r7.largebox.rlx  dump.graphite1
results/: psd_data.csv  result_ex1_1.csv  result_ex1_2.csv  result_ex1_3.csv  result_ex1_4.csv  result_ex1_5.csv  result_ex1_6.csv  result_ex1_7.csv  result_ex2_1.csv  result_ex2_2.csv  result_ex2_3.csv  result_ex2_4.csv  result_ex2_5.csv  result_ex3_1.csv  result_ex3_2.csv  result_ex3_3.csv
src/: Geometry.h  Histogram.cpp  Histogram.h  PDBParser.cpp  PDBParser.h  Potential.cpp  Potential.h  SphereFinder.cpp  SphereFinder.h  accessible_volume.cpp  accessible_volume.h  main.cpp
